Have clients where we've set their position as non-placeable

If the client opted to position them on purpose, don't move them around.
If the geometry of the workspace changes it's their job to react
accordingly.

BUG: 429353